--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><title>test</title><link href=/static/css/app.d41d8cd98f00b204e9800998ecf8427e.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.24a01b010c9446be4179.js></script><script type=text/javascript src=/static/js/vendor.3d948c7ddc73ab23fb67.js></script><script type=text/javascript src=/static/js/app.09c43c536a06ab3b17f1.js></script></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset=utf-8>
+  <title>test</title>
+  <link href=./static/css/app.d41d8cd98f00b204e9800998ecf8427e.css rel=stylesheet>
+</head>
+<body>
+<div id=app></div>
+<script type=text/javascript src=./static/js/manifest.24a01b010c9446be4179.js></script>
+<script type=text/javascript src=./static/js/vendor.3d948c7ddc73ab23fb67.js></script>
+<script type=text/javascript src=./static/js/app.09c43c536a06ab3b17f1.js></script>
+</body>
+</html>
