--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cn">
 <head>
   <meta charset=utf-8>
   <title>test</title>
-  <link href=./static/css/app.d41d8cd98f00b204e9800998ecf8427e.css rel=stylesheet>
+  <link href=./static/css/app.134047a94b5cdde5a78fb6dceaeed5c2.css rel=stylesheet>
 </head>
 <body>
 <div id=app></div>
-<script type=text/javascript src=./static/js/manifest.24a01b010c9446be4179.js></script>
-<script type=text/javascript src=./static/js/vendor.3d948c7ddc73ab23fb67.js></script>
-<script type=text/javascript src=./static/js/app.09c43c536a06ab3b17f1.js></script>
+<script type=text/javascript src=./static/js/manifest.6d4371f6b843cfa6780b.js></script>
+<script type=text/javascript src=./static/js/vendor.d3fce81b80f2206b76b3.js></script>
+<script type=text/javascript src=./static/js/app.df00828359a535165529.js></script>
 </body>
 </html>
