--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html>
 <head>
   <meta charset=utf-8>
   <title>test</title>
-  <link href=./static/css/app.134047a94b5cdde5a78fb6dceaeed5c2.css rel=stylesheet>
+  <link href=./static/css/app.0a7a16fac6fdd98104ac989de02f71f3.css rel=stylesheet>
 </head>
 <body>
 <div id=app></div>
-<script type=text/javascript src=./static/js/manifest.6d4371f6b843cfa6780b.js></script>
-<script type=text/javascript src=./static/js/vendor.d3fce81b80f2206b76b3.js></script>
-<script type=text/javascript src=./static/js/app.df00828359a535165529.js></script>
+<script type=text/javascript src=./static/js/manifest.c365e9a81905c94bfa4e.js></script>
+<script type=text/javascript src=./static/js/vendor.28d1baf58ab4245c280e.js></script>
+<script type=text/javascript src=./static/js/app.d688d8255ef9bbb7a04b.js></script>
 </body>
 </html>
